RESOLVED FIXED139921
[iOS] Log better using FeatureCounter why PageCache is failing due to pruned resources
https://bugs.webkit.org/show_bug.cgi?id=139921
Summary [iOS] Log better using FeatureCounter why PageCache is failing due to pruned ...
Chris Dumez
Reported 2014-12-23 15:42:57 PST
Log better using FeatureCounter why PageCache is failing due to pruned resources. The reason can be: - Page cache reached maximum capacity - Memory pressure - Process suspended (WK2) Radar: <rdar://problem/19255690>
Attachments
Patch (15.03 KB, patch)
2014-12-23 15:56 PST, Chris Dumez
no flags
Patch (15.10 KB, patch)
2014-12-23 15:57 PST, Chris Dumez
no flags
Patch (14.74 KB, patch)
2014-12-23 16:33 PST, Chris Dumez
no flags
Patch (15.67 KB, patch)
2014-12-25 12:00 PST, Chris Dumez
no flags
Patch (15.72 KB, patch)
2014-12-25 12:29 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2014-12-23 15:56:04 PST
Chris Dumez
Comment 2 2014-12-23 15:57:15 PST
Chris Dumez
Comment 3 2014-12-23 16:33:14 PST
WebKit Commit Bot
Comment 4 2014-12-23 17:14:06 PST
Comment on attachment 243710 [details] Patch Clearing flags on attachment: 243710 Committed r177712: <http://trac.webkit.org/changeset/177712>
WebKit Commit Bot
Comment 5 2014-12-23 17:14:12 PST
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 6 2014-12-24 23:33:14 PST
This made a regression test flakily assert: http://webkit-test-results.appspot.com/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=fast%2Floader%2Fcrash-copying-backforwardlist.html 0 com.apple.JavaScriptCore 0x0000000106ce8b8a WTFCrash + 42 (Assertions.cpp:321) 1 com.apple.WebCore 0x000000010cb57a51 WebCore::pruningReasonToFeatureCounterKey(WebCore::PruningReason) + 193 (PageCache.cpp:451) 2 com.apple.WebCore 0x000000010cb57ba2 WebCore::PageCache::get(WebCore::HistoryItem*, WebCore::Page*) + 306 (PageCache.cpp:512) 3 com.apple.WebCore 0x000000010bee4164 WebCore::FrameLoader::loadDifferentDocumentItem(WebCore::HistoryItem*, WebCore::FrameLoadType, WebCore::FrameLoader::FormSubmissionCacheLoadPolicy) + 116 (FrameLoader.cpp:3178) 4 com.apple.WebCore 0x000000010beee676 WebCore::FrameLoader::loadItem(WebCore::HistoryItem*, WebCore::FrameLoadType) + 166 (FrameLoader.cpp:3271) 5 com.apple.WebCore 0x000000010c00183d WebCore::HistoryController::recursiveGoToItem(WebCore::HistoryItem*, WebCore::HistoryItem*, WebCore::FrameLoadType) + 141 (HistoryController.cpp:740) 6 com.apple.WebCore 0x000000010c0015a5 WebCore::HistoryController::goToItem(WebCore::HistoryItem*, WebCore::FrameLoadType) + 405 (HistoryController.cpp:301) 7 com.apple.WebCore 0x000000010cb45f99 WebCore::Page::goToItem(WebCore::HistoryItem*, WebCore::FrameLoadType) + 201 (Page.cpp:446)
WebKit Commit Bot
Comment 7 2014-12-25 08:19:32 PST
Re-opened since this is blocked by bug 139944
Chris Dumez
Comment 8 2014-12-25 11:28:08 PST
Ok, the problem seems to be that HistoryItem::m_prunedReason is not correctly initialized in the HistoryItem copy constructor.
Chris Dumez
Comment 9 2014-12-25 12:00:57 PST
Chris Dumez
Comment 10 2014-12-25 12:03:19 PST
Comment on attachment 243748 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=243748&action=review > Source/WebCore/history/HistoryItem.cpp:165 > + , m_pruningReason(PruningReason::None) This is what was missing in the previous patch that landed. I missed it because m_next / m_prev pointers weren't initialized here either. I am now initializing m_next / m_prev here as well as there is no guarantee those will be initialized to nullptr.
Alexey Proskuryakov
Comment 11 2014-12-25 12:27:01 PST
rs=me on the additional changes. I think that this should be landed under original Gavin's review.
Chris Dumez
Comment 12 2014-12-25 12:29:41 PST
WebKit Commit Bot
Comment 13 2014-12-25 13:09:45 PST
Comment on attachment 243749 [details] Patch Clearing flags on attachment: 243749 Committed r177738: <http://trac.webkit.org/changeset/177738>
WebKit Commit Bot
Comment 14 2014-12-25 13:09:53 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.