[iOS] Log better using FeatureCounter why PageCache is failing due to pruned resources https://bugs.webkit.org/show_bug.cgi?id=139921 <rdar://problem/19255690>

Reviewed by Gavin Barraclough.

Source/WebCore:

Log better using FeatureCounter why PageCache is failing due to pruned
resources. In particular, we now distinguish if the resource was pruned
due to:
- Memory pressure
- Page cache capacity reached
- WebProcess suspended (WK2)

* WebCore.exp.in:
* history/HistoryItem.cpp:
(WebCore::HistoryItem::HistoryItem):
* history/HistoryItem.h:
* history/PageCache.cpp:
(WebCore::PageCache::pruneToCapacityNow):
(WebCore::PageCache::setCapacity):
(WebCore::pruningReasonToFeatureCounterKey):
(WebCore::PageCache::add):
(WebCore::PageCache::take):
(WebCore::PageCache::get):
(WebCore::PageCache::prune):
* history/PageCache.h:
* loader/FrameLoader.cpp:
(WebCore::FrameLoader::commitProvisionalLoad):
* platform/FeatureCounterKeys.h:
* platform/MemoryPressureHandler.cpp:
(WebCore::MemoryPressureHandler::releaseCriticalMemory):

Source/WebKit2:

Call PageCache::pruneToCapacityNow() instead of multiple calls to
setCapacity() as it does exactly what we want. Also pass the new
PrunedReason argument so help us do better logging.

* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::releasePageCache):


Canonical link: https://commits.webkit.org/157870@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177712 268f45cc-cd09-0410-ab3c-d52691b4dbfc